Fix header z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ body {
     width: 100%;
     background-color: #FFF;
     /* box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.1); */
-    z-index: 3;
+    z-index: 11;
     padding: 1rem;
     text-align: center;
 
